fix status quo bg on mobile

--- a/app/assets/stylesheets/homepage/_statusquo.scss
+++ b/app/assets/stylesheets/homepage/_statusquo.scss
@@ -1,8 +1,7 @@
 .status-quo {
   padding-top: 60px;
   padding-bottom: 40px;
-  background-color: #F6FBFF;
-  background: image-url("status_quo_bg.png");
+  background: #F6FBFF image-url("status_quo_bg.png");
   background-size: cover;
   @media(min-width: $medium) {
     background: #F6FBFF;
